<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2016. Self Training Systems, Inc - All Rights Reserved
  ~ Unauthorized copying of this file, via any medium is strictly prohibited
  ~ Proprietary and confidential
  ~ Written by TienVNguyen <tien.workinfo@gmail.com - tien.workinfo@icloud.com>, October 2015
  -->

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:orientation="horizontal"
    app:cardCornerRadius="@dimen/card_corner_radius"
    app:cardElevation="@dimen/card_elevation"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/itemIvProfileImageUrl"
            android:layout_width="@dimen/profile_image"
            android:layout_height="@dimen/profile_image"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/activity_horizontal_padding"
            android:src="@drawable/ic_launcher" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <org.sufficientlysecure.htmltextview.HtmlTextView
                android:id="@+id/itemHtmlTvUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingTop="@dimen/activity_horizontal_padding"
                android:text="@string/item_user"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/itemTvText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/itemHtmlTvUser"
                android:paddingTop="@dimen/activity_horizontal_padding"
                android:text="@string/item_text"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/itemImgTweet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/itemTvText"
                android:contentDescription="@string/image_content_description"
                android:paddingTop="@dimen/activity_horizontal_padding"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/itemIvReply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/itemImgTweet"
                android:contentDescription="@string/image_content_description"
                android:paddingTop="@dimen/activity_horizontal_padding"
                app:srcCompat="@drawable/icon_reply" />

            <ImageView
                android:id="@+id/itemImgLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/itemImgTweet"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/image_content_description"
                android:paddingTop="@dimen/activity_horizontal_padding"
                android:text="@string/like_number"
                app:srcCompat="@drawable/icon_heart_outline" />

            <TextView
                android:id="@+id/itemTxtLikeNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/itemImgTweet"
                android:layout_centerHorizontal="true"
                android:layout_toEndOf="@id/itemImgLike"
                android:layout_toRightOf="@id/itemImgLike"
                android:paddingBottom="@dimen/share_padding"
                android:paddingTop="@dimen/activity_horizontal_padding"
                android:text="@string/like_number" />

            <ImageView
                android:id="@+id/itemIvShared"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/itemImgTweet"
                android:contentDescription="@string/image_content_description"
                android:paddingTop="@dimen/activity_horizontal_padding"
                app:srcCompat="@drawable/icon_share" />
        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>